MESSAGE( STATUS "ROOTCINT... ")


ROOT_GENERATE_DICTIONARY( ${CMAKE_CURRENT_SOURCE_DIR}/CLASSObjectDict ${CLASS_HEADERS_DIR}/CLASSObject.hxx )
ROOT_GENERATE_DICTIONARY( ${CMAKE_CURRENT_SOURCE_DIR}/CLASSFacilityDict ${CLASS_HEADERS_DIR}/CLASSFacility.hxx )
ROOT_GENERATE_DICTIONARY( ${CMAKE_CURRENT_SOURCE_DIR}/CLASSBackEndDict ${CLASS_HEADERS_DIR}/CLASSBackEnd.hxx )
ROOT_GENERATE_DICTIONARY( ${CMAKE_CURRENT_SOURCE_DIR}/StorageDict ${CLASS_HEADERS_DIR}/Storage.hxx )
ROOT_GENERATE_DICTIONARY( ${CMAKE_CURRENT_SOURCE_DIR}/ReactorDict ${CLASS_HEADERS_DIR}/Reactor.hxx )
ROOT_GENERATE_DICTIONARY( ${CMAKE_CURRENT_SOURCE_DIR}/FabricationPlantDict ${CLASS_HEADERS_DIR}/FabricationPlant.hxx )
ROOT_GENERATE_DICTIONARY( ${CMAKE_CURRENT_SOURCE_DIR}/PoolDict ${CLASS_HEADERS_DIR}/Pool.hxx )
ROOT_GENERATE_DICTIONARY( ${CMAKE_CURRENT_SOURCE_DIR}/SeparationPlantDict ${CLASS_HEADERS_DIR}/SeparationPlant.hxx )
ROOT_GENERATE_DICTIONARY( ${CMAKE_CURRENT_SOURCE_DIR}/IsotopicVectorDict ${CLASS_HEADERS_DIR}/IsotopicVector.hxx )
ROOT_GENERATE_DICTIONARY( ${CMAKE_CURRENT_SOURCE_DIR}/ZAIDict ${CLASS_HEADERS_DIR}/ZAI.hxx )
ROOT_GENERATE_DICTIONARY( ${CMAKE_CURRENT_SOURCE_DIR}/EvolutionDataDict ${CLASS_HEADERS_DIR}/EvolutionData.hxx )
ROOT_GENERATE_DICTIONARY( ${CMAKE_CURRENT_SOURCE_DIR}/DecayDataBankDict ${CLASS_HEADERS_DIR}/DecayDataBank.hxx )
ROOT_GENERATE_DICTIONARY( ${CMAKE_CURRENT_SOURCE_DIR}/ScenarioDict ${CLASS_HEADERS_DIR}/Scenario.hxx )
ROOT_GENERATE_DICTIONARY( ${CMAKE_CURRENT_SOURCE_DIR}/ReactorSchedulerDict ${CLASS_HEADERS_DIR}/ReactorScheduler.hxx )
add_library(CLASSpkg_root STATIC CLASSBackEnd.cxx CLASSBackEndDict.cxx CLASSObject.cxx CLASSObjectDict.cxx  CLASSFacility.cxx CLASSFacilityDict.cxx  Storage.cxx StorageDict.cxx  Reactor.cxx ReactorDict.cxx  FabricationPlant.cxx FabricationPlantDict.cxx  Pool.cxx PoolDict.cxx  SeparationPlant.cxx SeparationPlantDict.cxx  IsotopicVector.cxx IsotopicVectorDict.cxx  ZAI.cxx ZAIDict.cxx  EvolutionData.cxx EvolutionDataDict.cxx  DecayDataBank.cxx DecayDataBankDict.cxx  Scenario.cxx ScenarioDict.cxx  ReactorScheduler.cxx ReactorSchedulerDict.cxx)
target_link_libraries(CLASSpkg_root ${ROOT_LIBRARIES})
MESSAGE( STATUS "... OK!")

LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CLASSLogger.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/ZAI.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/IsotopicVector.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/ZAIMass.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/ZAIHeat.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/ZAITox.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CLASSNucleiFiliation.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CLASSObject.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CLASSFacility.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/FabricationPlant.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/Reactor.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CLASSBackEnd.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/SeparationPlant.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/Storage.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/Pool.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/DecayDataBank.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/DynamicalSystem.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/IrradiationModel.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/EquivalenceModel.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/XSModel.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/PhysicsModels.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/EvolutionData.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/ReactorScheduler.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/Scenario.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CLASSReader.cxx")

SET( CLASS_SRC_FILE ${CLASS_SRC_FILE} PARENT_SCOPE)

MESSAGE( STATUS "CLASS_SRC_FILE=" ${CLASS_SRC_FILE})

#INCLUDE_DIRECTORIES( ${CLASS_HEADERS_DIR} )

#ADD_LIBRARY(CLASS_LIBRARY STATIC ${CLASS_SRC_FILE} )
#TARGET_LINK_LIBRARIES(CLASS_LIBRARY SRC)
