MESSAGE( STATUS "IN INCLUDE ")
ADD_SUBDIRECTORY(include)
MESSAGE( STATUS "IN SRC ")
ADD_SUBDIRECTORY(src)
MESSAGE( STATUS "IN MODEL ")
#ADD_SUBDIRECTORY(Model)

MESSAGE( STATUS "CLASS_SRC_FILE=" ${CLASS_SRC_FILE})


INCLUDE_DIRECTORIES( ${CLASS_HEADERS_DIR} )
ADD_LIBRARY(CLASSpkg_root STATIC ${CLASS_SRC_FILE} )



ADD_SUBDIRECTORY(Model/Equivalence)
ADD_SUBDIRECTORY(Model/Irradiation)
ADD_SUBDIRECTORY(Model/XS)

MESSAGE( STATUS "CLASS_EQMODEL_SRC_FILE : " ${CLASS_EQMODEL_SRC_FILE})
MESSAGE( STATUS "CLASS_XSMODEL_SRC_FILE : " ${CLASS_XSMODEL_SRC_FILE})
MESSAGE( STATUS "CLASS_IRMODEL_SRC_FILE : " ${CLASS_IRMODEL_SRC_FILE})

INCLUDE_DIRECTORIES( ${CLASS_EQMODEL_HEADER_DIR} ${CLASS_IRMODEL_HEADER_DIR} ${CLASS_XSMODEL_HEADER_DIR} ${CLASS_HEADERS_DIR} )

MESSAGE( STATUS "CMAKE_LIBRARY_OUTPUT_DIRECTORY : " ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

ADD_LIBRARY(CLASSpkg STATIC ${CLASS_SRC_FILE} ${CLASS_EQMODEL_SRC_FILE} ${CLASS_XSMODEL_SRC_FILE} ${CLASS_IRMODEL_SRC_FILE})
#target_link_libraries(CLASSpkg CLASSpkg_root)

