LIST( APPEND CLASS_XSMODEL_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/XSM_CLOSEST.cxx")
LIST( APPEND CLASS_XSMODEL_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/XSM_MLP.cxx")

SET( CLASS_XSMODEL_SRC_FILE ${CLASS_XSMODEL_SRC_FILE} PARENT_SCOPE)
SET( CLASS_XSMODEL_HEADER_DIR ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)

#INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CLASS_HEADERS_DIR} )
#ADD_LIBRARY(CLASS_XSMODEL_LIBRARY STATIC ${CLASS_XSMODEL_SRC_FILE})
#TARGET_LINK_LIBRARIES(CLASS_XSMODEL_LIBRARY XS_MODEL)
