MESSAGE( STATUS "ROOTCINT... ")

EXECUTE_PROCESS(COMMAND rootcint -f ${CMAKE_CURRENT_SOURCE_DIR}/CLASSObjectDict.cxx -c ${CLASS_HEADERS_DIR}/CLASSObject.hxx)
EXECUTE_PROCESS(COMMAND rootcint -f ${CMAKE_CURRENT_SOURCE_DIR}/CLASSFacilityDict.cxx -c ${CLASS_HEADERS_DIR}/CLASSFacility.hxx)
EXECUTE_PROCESS(COMMAND rootcint -f ${CMAKE_CURRENT_SOURCE_DIR}/CLASSBackEndDict.cxx -c ${CLASS_HEADERS_DIR}/CLASSBackEnd.hxx)
EXECUTE_PROCESS(COMMAND rootcint -f ${CMAKE_CURRENT_SOURCE_DIR}/StorageDict.cxx -c ${CLASS_HEADERS_DIR}/Storage.hxx)
EXECUTE_PROCESS(COMMAND rootcint -f ${CMAKE_CURRENT_SOURCE_DIR}/ReactorDict.cxx -c ${CLASS_HEADERS_DIR}/Reactor.hxx)
EXECUTE_PROCESS(COMMAND rootcint -f ${CMAKE_CURRENT_SOURCE_DIR}/FabricationPlantDict.cxx -c ${CLASS_HEADERS_DIR}/FabricationPlant.hxx)
EXECUTE_PROCESS(COMMAND rootcint -f ${CMAKE_CURRENT_SOURCE_DIR}/PoolDict.cxx -c ${CLASS_HEADERS_DIR}/Pool.hxx)
EXECUTE_PROCESS(COMMAND rootcint -f ${CMAKE_CURRENT_SOURCE_DIR}/SeparationPlantDict.cxx -c ${CLASS_HEADERS_DIR}/SeparationPlant.hxx)
EXECUTE_PROCESS(COMMAND rootcint -f ${CMAKE_CURRENT_SOURCE_DIR}/IsotopicVectorDict.cxx -c ${CLASS_HEADERS_DIR}/IsotopicVector.hxx)
EXECUTE_PROCESS(COMMAND rootcint -f ${CMAKE_CURRENT_SOURCE_DIR}/ZAIDict.cxx -c ${CLASS_HEADERS_DIR}/ZAI.hxx)
EXECUTE_PROCESS(COMMAND rootcint -f ${CMAKE_CURRENT_SOURCE_DIR}/EvolutionDataDict.cxx -c ${CLASS_HEADERS_DIR}/EvolutionData.hxx)

MESSAGE( STATUS "... OK!")

LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CLASSLogger.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/ZAI.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/ZAIDict.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/IsotopicVector.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/IsotopicVectorDict.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/ZAIMass.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/ZAIHeat.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/ZAITox.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CLASSNucleiFiliation.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CLASSObject.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CLASSObjectDict.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CLASSFacility.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CLASSFacilityDict.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/FabricationPlant.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/FabricationPlantDict.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/Reactor.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/ReactorDict.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CLASSBackEnd.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CLASSBackEndDict.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/SeparationPlant.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/SeparationPlantDict.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/Storage.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/StorageDict.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/Pool.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/PoolDict.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/DecayDataBank.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/DynamicalSystem.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/IrradiationModel.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/EquivalenceModel.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/XSModel.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CLASSFuel.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/PhysicsModels.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/EvolutionData.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/EvolutionDataDict.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CLASSFuelPlan.cxx")
LIST( APPEND CLASS_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/Scenario.cxx")

SET( CLASS_SRC_FILE ${CLASS_SRC_FILE} PARENT_SCOPE)

MESSAGE( STATUS "CLASS_SRC_FILE=" ${CLASS_SRC_FILE})

#INCLUDE_DIRECTORIES( ${CLASS_HEADERS_DIR} )

#ADD_LIBRARY(CLASS_LIBRARY STATIC ${CLASS_SRC_FILE} )
#TARGET_LINK_LIBRARIES(CLASS_LIBRARY SRC)
