LIST( APPEND CLASS_EQMODEL_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/EQM_FBR_BakerRoss_MOX.cxx")
LIST( APPEND CLASS_EQMODEL_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/EQM_PWR_MLP_MOX.cxx")
LIST( APPEND CLASS_EQMODEL_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/EQM_FBR_MLP_Keff.cxx")
LIST( APPEND CLASS_EQMODEL_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/EQM_PWR_MLP_MOX_Am.cxx")
LIST( APPEND CLASS_EQMODEL_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/EQM_FBR_MLP_Keff_BOUND.cxx")
LIST( APPEND CLASS_EQMODEL_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/EQM_PWR_POL_UO2.cxx")
LIST( APPEND CLASS_EQMODEL_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/EQM_MLP_Kinf.cxx")
LIST( APPEND CLASS_EQMODEL_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/EQM_PWR_QUAD_MOX.cxx")
LIST( APPEND CLASS_EQMODEL_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/EQM_PWR_LIN_MOX.cxx")


SET( CLASS_EQMODEL_SRC_FILE ${CLASS_EQMODEL_SRC_FILE} PARENT_SCOPE)
SET( CLASS_EQMODEL_HEADER_DIR ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)



#INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CLASS_HEADERS_DIR} )
#ADD_LIBRARY(CLASS_EQMODEL_LIBRARY STATIC ${CLASS_EQMODEL_SRC_FILELIST})

#TARGET_LINK_LIBRARIES(CLASS_EQMODEL_LIBRARY EQ_MODEL)
