LIST( APPEND CLASS_IRMODEL_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/IM_Matrix.cxx")
LIST( APPEND CLASS_IRMODEL_SRC_FILE "${CMAKE_CURRENT_SOURCE_DIR}/IM_RK4.cxx")

SET( CLASS_IRMODEL_SRC_FILE ${CLASS_IRMODEL_SRC_FILE} PARENT_SCOPE)
SET( CLASS_IRMODEL_HEADER_DIR ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)


#INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CLASS_HEADERS_DIR} )
#ADD_LIBRARY(CLASS_IRMODEL_LIBRARY STATIC ${CLASS_IRMODEL_SRC_FILE})

#TARGET_LINK_LIBRARIES(CLASS_IRMODEL_LIBRARY IR_MODEL)
